# template-fpga

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: amaranth_template_fpga.py
src/amaranth_template_fpga/: __init__.py  blinky.py
tests/: test_blinky.py
